--- a/OOP-Project/OOP-Project.cbp
+++ b/OOP-Project/OOP-Project.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -32,7 +34,13 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="LISTA.in" />
+		<Unit filename="LISTA.out" />
+		<Unit filename="include/lista_operator.h" />
+		<Unit filename="include/screen_messages.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/lista_operator.cpp" />
+		<Unit filename="src/screen_messages.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
